--- a/src/app/folder/folder.page.html
+++ b/src/app/folder/folder.page.html
@@ -1,21 +1,28 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
-    <ion-title>{{ folder }}</ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-buttons slot="start">
+            <ion-menu-button></ion-menu-button>
+        </ion-buttons>
+        <ion-title>{{ folder }}</ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">{{ folder }}</ion-title>
-    </ion-toolbar>
-  </ion-header>
+    <ng-template ngFor let-card [ngForOf]="[1,2,3,4,5]">
+        <ion-card mode="ios">
+            <ion-img src="assets/exemplo-imovel.png"></ion-img>
 
-  <div id="container">
-    <strong class="capitalize">{{ folder }}</strong>
-    <p>Explore <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+            <ion-card-subtitle>
+                Rua Prudente de Morais 144a Centro
+            </ion-card-subtitle>
+
+            <ion-toolbar class="ion-margin-bottom">
+                <ion-text color="danger">R$ 800,00</ion-text>
+                <ion-button slot="end">
+                    <ion-icon name="add" slot="start"></ion-icon>
+                    <ion-label>Ver mais</ion-label>
+                </ion-button>
+            </ion-toolbar>
+        </ion-card>
+    </ng-template>
 </ion-content>
