--- a/src/app/detalhes-imovel/detalhes-imovel.page.html
+++ b/src/app/detalhes-imovel/detalhes-imovel.page.html
@@ -1,7 +1,7 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>detalhes-imovel</ion-title>
-  </ion-toolbar>
+    <ion-toolbar color="primary">
+        <ion-title>Detalhes Imóvel</ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content>
