wip: login with firebase

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,5 +1,5 @@
 <ion-content>
-  <form>
+  <form [formGroup]="credentialsForm" (ngSubmit)="login()">
     <ion-card class="ion-padding">
       <div class="container-img">
         <img src="https://picsum.photos/200" />
@@ -7,15 +7,27 @@
 
       <ion-item class="ion-margin-bottom">
         <ion-label position="floating">E-mail</ion-label>
-        <ion-input type="email"></ion-input>
+        <ion-input type="email" formControlName="email"></ion-input>
       </ion-item>
 
       <ion-item class="ion-margin-bottom">
         <ion-label position="floating">Senha</ion-label>
-        <ion-input type="password"></ion-input>
+        <ion-input type="password" formControlName="password"></ion-input>
       </ion-item>
 
-      <ion-button expand="full" class="ion-margin-bottom">Login</ion-button>
+      <ion-button expand="full" class="ion-margin-bottom" type="submit">
+        Login
+      </ion-button>
+
+      <ion-button
+        expand="full"
+        color="secondary"
+        class="ion-margin-bottom"
+        type="button"
+        (click)="register()"
+      >
+        Cadastrar
+      </ion-button>
 
       <ion-button color="dark" expand="full">
         <ion-icon name="logo-google" slot="start"></ion-icon>
