--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,8 +1,11 @@
 <ion-content>
     <form [formGroup]="credentialsForm" (ngSubmit)="login()">
         <ion-card class="ion-padding">
-            <div class="container-img">
-                <img src="https://picsum.photos/200" />
+            <ion-label class="label-login">
+                Aluga Conquista
+            </ion-label>
+            <div class="container-img-login">
+                <img src="assets/images/house-hand.jpg" />
             </div>
 
             <ion-item class="ion-margin-bottom">
@@ -14,19 +17,20 @@
                 <ion-label position="floating">Senha</ion-label>
                 <ion-input type="password" formControlName="password"></ion-input>
             </ion-item>
+            <div class="buttons-page-login">
+                <ion-button expand="full" class="ion-margin-bottom" type="submit">
+                    Login
+                </ion-button>
 
-            <ion-button expand="full" class="ion-margin-bottom" type="submit">
-                Login
-            </ion-button>
+                <ion-button expand="full" color="secondary" class="ion-margin-bottom" type="button" (click)="register()">
+                    Cadastrar
+                </ion-button>
 
-            <ion-button expand="full" color="secondary" class="ion-margin-bottom" type="button" (click)="register()">
-                Cadastrar
-            </ion-button>
-
-            <ion-button color="dark" expand="full">
-                <ion-icon name="logo-google" slot="start"></ion-icon>
-                <ion-label>Login com Google</ion-label>
-            </ion-button>
+                <ion-button color="dark" expand="full">
+                    <ion-icon name="logo-google" slot="start"></ion-icon>
+                    <ion-label>Login com Google</ion-label>
+                </ion-button>
+            </div>
         </ion-card>
     </form>
 </ion-content>
