--- a/src/app/folder/folder.page.scss
+++ b/src/app/folder/folder.page.scss
@@ -54,3 +54,13 @@ ion-img {
     max-width: 45%;
     white-space: normal;
 }
+
+.header-toolbar-title ion-label {
+    color: black;
+    font-weight: bold;
+    font-size: 1.8rem;
+}
+
+.toolbar-background {
+    position: relative;
+}
