--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,6 +1,11 @@
 <ion-content>
     <form [formGroup]="credentialsForm" (ngSubmit)="login()">
+
         <ion-card class="ion-padding">
+            <ion-button href="/folder/inbox">
+                <ion-icon name="home-outline"></ion-icon>
+                Voltar
+            </ion-button>
             <ion-label class="label-login">
                 Aluga Conquista
             </ion-label>
