--- a/src/app/folder/folder.page.html
+++ b/src/app/folder/folder.page.html
@@ -1,40 +1,42 @@
 <ion-header [translucent]="true">
-
-    <ion-toolbar class="header-toolbar-title">
-        <ion-label>Aluga Conquista</ion-label>
-        <ion-button href="/login">
-            <ion-icon name="person-circle-outline"></ion-icon>
-            Entrar
-        </ion-button>
-        <!--
-    arrumar o estilo desses butões criados, estao nas linhas certas, mas nao do espaçamento.
--->
-    </ion-toolbar>
-    <ion-toolbar>
-        <ion-buttons slot="start">
-            <ion-menu-button class="filter-button-menu">Filtros</ion-menu-button>
-        </ion-buttons>
-
-        <ion-title>{{ folder }}</ion-title>
-        <ion-button color="danger" (click)="cadastrarImovel()">Anuncie seu imóvel aqui</ion-button>
-    </ion-toolbar>
-    <!-- Fazer a verificação de anunciar imóvel só se estiver logado-->
+  <ion-toolbar>
+    <ion-label>Aluga Conquista</ion-label>
+    <ion-buttons slot="end">
+      <ion-button routerLink="/login">
+        <ion-icon name="person-circle-outline"></ion-icon>
+        <ion-label>Entrar</ion-label>
+      </ion-button>
+    </ion-buttons>
+  </ion-toolbar>
+  <ion-toolbar>
+    <ion-button expand="block" (click)="openSideMenu()">Filtros</ion-button>
+    <ion-button
+      color="danger"
+      expand="block"
+      (click)="cadastrarImovel()"
+      *ngIf="user"
+    >
+      Anuncie seu imóvel aqui
+    </ion-button>
+  </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-    <ion-card mode="ios" *ngFor="let imovel of imoveis">
-        <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y" />
+  <ion-card mode="ios" *ngFor="let imovel of imoveis">
+    <img
+      src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y"
+    />
 
-        <ion-card-subtitle>
-            {{imovel.endereco + ' ' + imovel.bairro + ' '}}
-        </ion-card-subtitle>
+    <ion-card-subtitle>
+      {{imovel.endereco + ' ' + imovel.bairro + ' '}}
+    </ion-card-subtitle>
 
-        <ion-toolbar class="ion-margin-bottom">
-            <ion-text color="danger">{{imovel.valor | currency: 'BRL'}}</ion-text>
-            <ion-button slot="end" (click)="irParaDetalhesImovel()">
-                <ion-icon name="add" slot="start"></ion-icon>
-                <ion-label>Ver mais</ion-label>
-            </ion-button>
-        </ion-toolbar>
-    </ion-card>
+    <ion-toolbar class="ion-margin-bottom">
+      <ion-text color="danger">{{imovel.valor | currency: 'BRL'}}</ion-text>
+      <ion-button slot="end" (click)="irParaDetalhesImovel()">
+        <ion-icon name="add" slot="start"></ion-icon>
+        <ion-label>Ver mais</ion-label>
+      </ion-button>
+    </ion-toolbar>
+  </ion-card>
 </ion-content>
