--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -2,7 +2,7 @@
     <form [formGroup]="credentialsForm" (ngSubmit)="login()">
 
         <ion-card class="ion-padding">
-            <ion-button href="/folder/inbox">
+            <ion-button routerLink="/folder/inbox">
                 <ion-icon name="home-outline"></ion-icon>
                 Voltar
             </ion-button>
