--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -5,14 +5,14 @@
 
 :root {
     /** primary **/
-    --ion-color-primary: #3880ff;
+    --ion-color-primary: #4f66e7;
     --ion-color-primary-rgb: 56, 128, 255;
     --ion-color-primary-contrast: #ffffff;
     --ion-color-primary-contrast-rgb: 255, 255, 255;
     --ion-color-primary-shade: #3171e0;
     --ion-color-primary-tint: #4c8dff;
     /** secondary **/
-    --ion-color-secondary: #3dc2ff;
+    --ion-color-secondary: #4ec24a;
     --ion-color-secondary-rgb: 61, 194, 255;
     --ion-color-secondary-contrast: #ffffff;
     --ion-color-secondary-contrast-rgb: 255, 255, 255;
